--- a/RythmGame/.project
+++ b/RythmGame/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RythmGame</name>
+	<name>RhythmGame</name>
 	<comment></comment>
 	<projects>
 	</projects>
